# datasette-webhook-write

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
datasette_webhook_write/: __init__.py
src/datasette_webhook_write/: __init__.py
tests/: test_webhook_write.py
