[metadata]
name = datasette-webhook-write
version = attr: datasette_webhook_write.__version__
url = https://github.com/mfa/datasette-webhook-write
author = Andreas Madsack
description = Datasette plugin to write to database via verified webhooks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Issues = https://github.com/mfa/datasette-webhook-write/issues
    CI = https://github.com/mfa/datasette-webhook-write/actions
    Changelog = https://github.com/mfa/datasette-webhook-write/releases

[options]
include_package_data = true
install_requires =
    datasette
    sqlite-utils
packages = find_namespace:
package_dir =
    =src
python_requires = >=3.8.0
zip_safe = false

[options.entry_points]
datasette =
    webhook_write=datasette_webhook_write

[options.extras_require]
test =
    httpx
    pytest
    pytest-asyncio

[options.packages.find]
where = src
exclude =
    tests
